--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,14 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+    // Firebase Core
+    implementation 'com.google.firebase:firebase-core:16.0.8'
+    // Firestore
+    implementation 'com.google.firebase:firebase-firestore:18.2.0'
+    // Google Sign in
+    implementation 'com.google.firebase:firebase-auth:16.2.1'
+    implementation 'com.google.android.gms:play-services-auth:16.0.1'
 }
+// Firebase
+apply plugin: 'com.google.gms.google-services'
