--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
             android:value="@integer/google_play_services_version" />
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyC8baJpDFplbZ-0B_EuOgRYCHppdxpTVs8"/>
+            android:value="@string/google_map_api"/>
     </application>
 
 </manifest>
